# Money-dector-for-the-blind

./: README.md  annotate_images.py  app_ frontend.py  appsetup.py  batch_label_generator.py  cam.py  dataset.yaml  debug_dataset.py  debug_training.py  format converter.py  inference_app.py  labels.txt  m.py  model converter to onyx.py  model_diagnostics.py  money_detector_app.py  onnx_money_detector_app.py  pyproject.toml  requirements.txt  simple_split.py  tts_test.py  ultralytics_money_detector.py
appc/: pyvenv.cfg
appc/Scripts/: activate  activate.bat  garden
dataset/labels/: 100__311.txt  100__313.txt  100__325.txt  100__326.txt  100__327.txt  100__329.txt  100__365.txt  100__391.txt  100__398.txt  100__399.txt  100__44.txt  10__423.txt  10__424.txt  10__425.txt  10__428.txt  10__435.txt  10__438.txt  200.__49.txt  200.__51.txt  200.__53.txt  200.__55.txt  200.__68.txt  200.__8.txt  2000__43.txt  2000__44.txt  2000__46.txt  2000__47.txt  2000__48.txt  2000__52.txt  2000__53.txt  2000__54.txt  2000__56.txt  2000__8.txt  20__401.txt  20__403.txt  20__404.txt  20__405.txt  20__406.txt  20__408.txt  20__412.txt  (+39 more)
dataset/labels/train/: 100__328.txt  100__360.txt  100__389.txt  100__390.txt  100__400.txt  10__422.txt  10__426.txt  10__427.txt  10__429.txt  10__431.txt  10__432.txt  10__433.txt  10__434.txt  10__436.txt  10__437.txt  10__439.txt  10__55.txt  10__63.txt  200.__48.txt  200.__5.txt  200.__50.txt  200.__52.txt  200.__54.txt  200.__7.txt  200.__70.txt  200.__71.txt  200.__72.txt  200.__73.txt  200.__74.txt  (+55 more)
src/moneydetector/: __init__.py  __main__.py
(+23 files in other folders)
